--- a/PetProject/Storyboards/Base.lproj/Main.storyboard
+++ b/PetProject/Storyboards/Base.lproj/Main.storyboard
@@ -1,13 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--View Controller-->
+        <scene sceneID="YnR-2G-NCG">
+            <objects>
+                <viewController id="kWp-ng-E1z" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mMo-CQ-m81">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="RU5-CJ-aAS">
+                                <rect key="frame" x="134" y="244" width="52" height="80"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Yu-Pn-ISU">
+                                        <rect key="frame" x="0.0" y="0.0" width="52" height="30"/>
+                                        <state key="normal" title="Log In"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jdn-Kx-kN2">
+                                        <rect key="frame" x="0.0" y="50" width="52" height="30"/>
+                                        <state key="normal" title="Sign up"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Gdg-S5-zx1"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="RU5-CJ-aAS" firstAttribute="centerX" secondItem="mMo-CQ-m81" secondAttribute="centerX" id="JYh-iq-oXP"/>
+                            <constraint firstItem="RU5-CJ-aAS" firstAttribute="centerY" secondItem="mMo-CQ-m81" secondAttribute="centerY" id="bxP-jw-JYX"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ixp-Le-86B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="399" y="-674"/>
+        </scene>
         <!--Auth View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -53,16 +87,16 @@
                                             <constraint firstAttribute="trailing" secondItem="NjO-sX-hqO" secondAttribute="trailing" id="w2H-da-FMr"/>
                                         </constraints>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="UFH-gC-07h">
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="UFH-gC-07h">
                                         <rect key="frame" x="0.0" y="143" width="280" height="30"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XbQ-jt-FTB">
-                                                <rect key="frame" x="0.0" y="0.0" width="140" height="30"/>
-                                                <state key="normal" title="Button"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="133" height="30"/>
+                                                <state key="normal" title="Forgot User Name?"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lxc-b1-vCF">
-                                                <rect key="frame" x="140" y="0.0" width="140" height="30"/>
-                                                <state key="normal" title="Button"/>
+                                                <rect key="frame" x="157" y="0.0" width="123" height="30"/>
+                                                <state key="normal" title="Forgot Password?"/>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -85,12 +119,69 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="20" y="78"/>
+            <point key="canvasLocation" x="18.75" y="77.112676056338032"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="OSH-sk-dxd">
+            <objects>
+                <viewController id="ZZW-qn-JKx" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wZS-fA-zh1">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="jSx-8w-Yas">
+                                <rect key="frame" x="20" y="188" width="280" height="192"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Aui-gP-gey">
+                                        <rect key="frame" x="0.0" y="0.0" width="280" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XQx-cm-cd8">
+                                        <rect key="frame" x="0.0" y="54" width="280" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EEv-T7-Fwb">
+                                        <rect key="frame" x="0.0" y="108" width="280" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fkW-ja-VIi">
+                                        <rect key="frame" x="98.5" y="162" width="83" height="30"/>
+                                        <state key="normal" title="Registration"/>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Aui-gP-gey" secondAttribute="trailing" id="Vse-g9-dZq"/>
+                                    <constraint firstItem="EEv-T7-Fwb" firstAttribute="leading" secondItem="jSx-8w-Yas" secondAttribute="leading" id="aVu-pv-2cc"/>
+                                    <constraint firstAttribute="trailing" secondItem="XQx-cm-cd8" secondAttribute="trailing" id="mVb-fD-l4y"/>
+                                    <constraint firstItem="XQx-cm-cd8" firstAttribute="leading" secondItem="jSx-8w-Yas" secondAttribute="leading" id="qYM-uK-vSO"/>
+                                    <constraint firstAttribute="trailing" secondItem="EEv-T7-Fwb" secondAttribute="trailing" id="tBy-sd-ENR"/>
+                                    <constraint firstItem="Aui-gP-gey" firstAttribute="leading" secondItem="jSx-8w-Yas" secondAttribute="leading" id="vaR-uZ-t6i"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="u8w-qg-WXf"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="u8w-qg-WXf" firstAttribute="trailing" secondItem="jSx-8w-Yas" secondAttribute="trailing" constant="20" id="H1s-bf-4sg"/>
+                            <constraint firstItem="jSx-8w-Yas" firstAttribute="centerY" secondItem="wZS-fA-zh1" secondAttribute="centerY" id="fxP-Ns-JGG"/>
+                            <constraint firstItem="jSx-8w-Yas" firstAttribute="leading" secondItem="u8w-qg-WXf" secondAttribute="leading" constant="20" id="q4j-LJ-MgQ"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yV9-oN-hjL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="763" y="77"/>
         </scene>
     </scenes>
     <resources>
         <systemColor name="linkColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
