--- a/PetProject/Storyboards/Base.lproj/Main.storyboard
+++ b/PetProject/Storyboards/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kWp-ng-E1z">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -156,6 +157,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fkW-ja-VIi">
                                         <rect key="frame" x="98.5" y="162" width="83" height="30"/>
                                         <state key="normal" title="Registration"/>
+                                        <connections>
+                                            <segue destination="jZv-yL-Uu9" kind="presentation" modalPresentationStyle="fullScreen" id="ro9-Sl-TbP"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -182,8 +186,135 @@
             </objects>
             <point key="canvasLocation" x="761" y="131"/>
         </scene>
+        <!--Setup Profile View Controller-->
+        <scene sceneID="yAs-Vi-Qs5">
+            <objects>
+                <viewController id="jZv-yL-Uu9" customClass="SetupProfileViewController" customModule="PetProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mdB-MA-838">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="1K1-lj-hCV">
+                                <rect key="frame" x="102.5" y="50" width="115" height="75"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZJw-ER-m5S">
+                                        <rect key="frame" x="0.0" y="0.0" width="75" height="75"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="75" id="Fw2-XW-JaW"/>
+                                            <constraint firstAttribute="width" constant="75" id="Kc5-1I-F2s"/>
+                                        </constraints>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zpt-z2-gej">
+                                        <rect key="frame" x="95" y="0.0" width="20" height="75"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="vxI-ye-VAU">
+                                <rect key="frame" x="35" y="155" width="250" height="64.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hRN-HL-XcD">
+                                        <rect key="frame" x="102.5" y="0.0" width="45" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oqE-gF-jCz">
+                                        <rect key="frame" x="0.0" y="30.5" width="250" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="ByP-b4-fx2"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="kQQ-L8-Jgj">
+                                <rect key="frame" x="35" y="249.5" width="250" height="64.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Surname" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AgP-8r-gBE">
+                                        <rect key="frame" x="91" y="0.0" width="68.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xah-mz-AkJ">
+                                        <rect key="frame" x="0.0" y="30.5" width="250" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="xRn-Nh-cBr"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="iWs-xS-ek0">
+                                <rect key="frame" x="35" y="344" width="250" height="61.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gender" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bnh-aF-Gtx">
+                                        <rect key="frame" x="97" y="0.0" width="56.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="8Sv-Zy-IZr">
+                                        <rect key="frame" x="0.0" y="30.5" width="250" height="32"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" id="UNB-n6-0fT"/>
+                                        </constraints>
+                                        <segments>
+                                            <segment title="Male"/>
+                                            <segment title="Female"/>
+                                        </segments>
+                                    </segmentedControl>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qYL-Nn-51l">
+                                <rect key="frame" x="85" y="455.5" width="150" height="30"/>
+                                <color key="backgroundColor" name="AccentColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="7BV-Pw-h0e"/>
+                                </constraints>
+                                <state key="normal" title="Go to chats!">
+                                    <color key="titleColor" red="1" green="0.99160183580000005" blue="0.97885755200000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                                <connections>
+                                    <action selector="goTochatButton:" destination="jZv-yL-Uu9" eventType="touchUpInside" id="249-jN-fy6"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="2Au-QF-uGl"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="iWs-xS-ek0" firstAttribute="top" secondItem="kQQ-L8-Jgj" secondAttribute="bottom" constant="30" id="8e4-co-AgR"/>
+                            <constraint firstItem="1K1-lj-hCV" firstAttribute="centerX" secondItem="mdB-MA-838" secondAttribute="centerX" id="8oR-VL-JmI"/>
+                            <constraint firstItem="iWs-xS-ek0" firstAttribute="centerX" secondItem="mdB-MA-838" secondAttribute="centerX" id="DcQ-8I-pc8"/>
+                            <constraint firstItem="qYL-Nn-51l" firstAttribute="centerX" secondItem="mdB-MA-838" secondAttribute="centerX" id="E9j-Ab-zSb"/>
+                            <constraint firstItem="qYL-Nn-51l" firstAttribute="top" secondItem="iWs-xS-ek0" secondAttribute="bottom" constant="50" id="O3X-HL-MlZ"/>
+                            <constraint firstItem="kQQ-L8-Jgj" firstAttribute="centerX" secondItem="mdB-MA-838" secondAttribute="centerX" id="RHg-OQ-UCd"/>
+                            <constraint firstItem="1K1-lj-hCV" firstAttribute="top" secondItem="2Au-QF-uGl" secondAttribute="top" constant="50" id="Sck-bZ-Wr4"/>
+                            <constraint firstItem="vxI-ye-VAU" firstAttribute="top" secondItem="1K1-lj-hCV" secondAttribute="bottom" constant="30" id="hQI-kg-wYo"/>
+                            <constraint firstItem="vxI-ye-VAU" firstAttribute="centerX" secondItem="mdB-MA-838" secondAttribute="centerX" id="jvB-jO-ScY"/>
+                            <constraint firstItem="kQQ-L8-Jgj" firstAttribute="top" secondItem="vxI-ye-VAU" secondAttribute="bottom" constant="30" id="k0H-2m-Rwg"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="addPhotoBytton" destination="zpt-z2-gej" id="Uqu-n7-ruo"/>
+                        <outlet property="chatButton" destination="qYL-Nn-51l" id="adT-nQ-kud"/>
+                        <outlet property="genderSegmentedControl" destination="8Sv-Zy-IZr" id="FXd-Nt-2E3"/>
+                        <outlet property="nameTextField" destination="oqE-gF-jCz" id="XOf-UW-K68"/>
+                        <outlet property="photoView" destination="ZJw-ER-m5S" id="3Vj-9x-9JE"/>
+                        <outlet property="surnameTextField" destination="Xah-mz-AkJ" id="wL8-Jp-OXg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nAo-yk-l2t" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="759" y="935"/>
+        </scene>
     </scenes>
     <resources>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="linkColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
