--- a/PetProject/Storyboards/Base.lproj/Main.storyboard
+++ b/PetProject/Storyboards/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="S1s-Dp-PEb">
-    <device id="retina4_0" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,14 +13,14 @@
             <objects>
                 <viewController id="Po7-XL-U4D" customClass="IntroductionViewController" customModule="PetProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tHi-t0-gZf">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="75" translatesAutoresizingMaskIntoConstraints="NO" id="mJW-rr-062">
-                                <rect key="frame" x="16" y="202.5" width="288" height="163"/>
+                                <rect key="frame" x="16" y="252" width="343" height="163"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A0L-Lk-UA2">
-                                        <rect key="frame" x="0.0" y="0.0" width="288" height="44"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="44"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Ильнара">
                                             <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="25"/>
@@ -32,7 +32,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ftv-gq-Ur8">
-                                        <rect key="frame" x="0.0" y="119" width="288" height="44"/>
+                                        <rect key="frame" x="0.0" y="119" width="343" height="44"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Астафьева">
                                             <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="25"/>
@@ -67,7 +67,7 @@
             <objects>
                 <viewController id="S5Z-9P-d6y" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Yrf-q2-wKe">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="25f-2G-WYm"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -81,45 +81,51 @@
         <!--Вопрос №-->
         <scene sceneID="rKT-O9-jJd">
             <objects>
-                <viewController id="1nA-Ig-JOx" sceneMemberID="viewController">
+                <viewController id="1nA-Ig-JOx" customClass="QuestionViewController" customModule="PetProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1dW-xY-v3E">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="37" translatesAutoresizingMaskIntoConstraints="NO" id="SpQ-E3-E9S">
-                                <rect key="frame" x="16" y="208" width="288" height="232"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="SpQ-E3-E9S">
+                                <rect key="frame" x="16" y="274.5" width="343" height="298"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nuw-Lo-Ms0">
-                                        <rect key="frame" x="0.0" y="0.0" width="288" height="28"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="37"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Button">
-                                            <fontDescription key="titleFontDescription" name="Helvetica" family="Helvetica" pointSize="12"/>
+                                            <fontDescription key="titleFontDescription" name="AppleSymbols" family="Apple Symbols" pointSize="25"/>
                                         </buttonConfiguration>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wMN-lK-3UX">
-                                        <rect key="frame" x="0.0" y="65" width="288" height="31"/>
+                                        <rect key="frame" x="0.0" y="87" width="343" height="37"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Button">
+                                            <fontDescription key="titleFontDescription" name="AppleSymbols" family="Apple Symbols" pointSize="25"/>
+                                        </buttonConfiguration>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7I1-bG-NWU">
-                                        <rect key="frame" x="0.0" y="133" width="288" height="31"/>
+                                        <rect key="frame" x="0.0" y="174" width="343" height="37"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Button">
+                                            <fontDescription key="titleFontDescription" name="AppleSymbols" family="Apple Symbols" pointSize="25"/>
+                                        </buttonConfiguration>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hdA-ec-2KI">
-                                        <rect key="frame" x="0.0" y="201" width="288" height="31"/>
+                                        <rect key="frame" x="0.0" y="261" width="343" height="37"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Button">
+                                            <fontDescription key="titleFontDescription" name="AppleSymbols" family="Apple Symbols" pointSize="25"/>
+                                        </buttonConfiguration>
                                     </button>
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6wy-SX-mCr">
-                                <rect key="frame" x="16" y="64" width="288" height="20.5"/>
+                                <rect key="frame" x="16" y="64" width="343" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="r9r-yF-ZD2">
-                                <rect key="frame" x="0.0" y="44" width="320" height="4"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="4"/>
                             </progressView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="WCP-Dl-ds4"/>
@@ -130,7 +136,7 @@
                             <constraint firstItem="6wy-SX-mCr" firstAttribute="leading" secondItem="WCP-Dl-ds4" secondAttribute="leading" constant="16" id="JQq-cG-Fhg"/>
                             <constraint firstItem="WCP-Dl-ds4" firstAttribute="trailing" secondItem="r9r-yF-ZD2" secondAttribute="trailing" id="L8a-c5-Rgy"/>
                             <constraint firstItem="6wy-SX-mCr" firstAttribute="top" secondItem="r9r-yF-ZD2" secondAttribute="bottom" constant="16" id="ZgB-O8-Z5P"/>
-                            <constraint firstItem="SpQ-E3-E9S" firstAttribute="centerY" secondItem="1dW-xY-v3E" secondAttribute="centerY" constant="40" id="gl5-SM-cDr"/>
+                            <constraint firstItem="SpQ-E3-E9S" firstAttribute="centerY" secondItem="1dW-xY-v3E" secondAttribute="centerY" constant="90" id="gl5-SM-cDr"/>
                             <constraint firstItem="r9r-yF-ZD2" firstAttribute="top" secondItem="WCP-Dl-ds4" secondAttribute="top" id="jJM-0y-ZE9"/>
                             <constraint firstItem="r9r-yF-ZD2" firstAttribute="leading" secondItem="WCP-Dl-ds4" secondAttribute="leading" id="qJq-S7-WNV"/>
                             <constraint firstItem="SpQ-E3-E9S" firstAttribute="leading" secondItem="WCP-Dl-ds4" secondAttribute="leading" constant="16" id="zPF-45-Xjh"/>
@@ -148,7 +154,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="S1s-Dp-PEb" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="lri-JB-TLy">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <textAttributes key="titleTextAttributes">
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
